adding getListingByPropertyID endpoint
